Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Operating Systems Switch Utility</h1>
-      <h2 class="project-tagline">Ossu</h2>
+      <h2 class="project-tagline">Better way for Operating Systems Switch, Just under GUI.</h2>
       <a href="https://github.com/easunlee/ossu" class="btn">View on GitHub</a>
       <a href="https://github.com/easunlee/ossu/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/easunlee/ossu/tarball/master" class="btn">Download .tar.gz</a>
